styled the about section of the app

--- a/index.html
+++ b/index.html
@@ -30,18 +30,21 @@
     </header>
     <main id="main-body">
       <section id="welcome-section">
-        <h1>Hi, I am Charles Freeborn</h1>
-        <h2>a frontend developer and technical writer</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-          nihil, deserunt eligendi vel dolores minus enim esse non expedita
-          ullam sequi corrupti repellat placeat quis ducimus! Beatae tenetur
-          obcaecati ut!
-        </p>
+        <span class="aside-welcome">
+          <h1>Hi there,</h1>
+          <h1>I am Charles Freeborn</h1>
+          <h2>a frontend developer & technical writer</h2>
+          <!-- <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+            nihil, deserunt eligendi vel dolores minus enim esse non expedita
+            ullam sequi corrupti repellat placeat quis ducimus! Beatae tenetur
+            obcaecati ut!
+          </p> -->
+        </span>
         <img
           src="assets/images/charles-profile-compressed.jpeg"
           alt="photo of charles Freeborn"
-          width="400"
+          id="profile-img"
         />
       </section>
 
