completed the building of the personal portfolio web app

--- a/index.html
+++ b/index.html
@@ -50,102 +50,101 @@
 
       <!-- Start of project section -->
       <section id="projects">
-        <h2>Selected Projects</h2>
+        <h2>Some of my selected projects</h2>
         <!-- use grid here to seperate the items -->
         <div class="wrapper">
-          <a
-            href="https://www.freecodecamp.org/freeborncharles"
-            target="_blank"
-          >
-            <figure>
+          <figure class="wrapper-item">
+            <a
+              href="https://www.freecodecamp.org/freeborncharles"
+              target="_blank"
+            >
               <img
                 src="/assets/images/cat-photos-compressed.png"
                 alt="project image"
                 class="image-item"
-                width="400"
               />
-              <figcaption class="project-tile">Image Gallery App</figcaption>
-            </figure>
-          </a>
+            </a>
+            <figcaption class="project-tile">Image Gallery App</figcaption>
+          </figure>
 
-          <a
-            href="https://github.com/charlesfreeborn/product-landing-page"
-            target="_blank"
-          >
-            <figure>
+          <figure class="wrapper-item">
+            <a
+              href="https://github.com/charlesfreeborn/product-landing-page"
+              target="_blank"
+            >
               <img
                 src="/assets/images/product-landing-page-compressed.png"
                 alt="project image"
                 class="image-item"
-                width="400"
               />
-              <figcaption>Product Landing Web App</figcaption>
-            </figure>
-          </a>
+            </a>
+            <figcaption class="project-tile">
+              Product Landing Web App
+            </figcaption>
+          </figure>
 
-          <a href="https://freeborncharles.com" target="_blank">
-            <figure>
+          <figure class="wrapper-item">
+            <a href="https://freeborncharles.com" target="_blank">
               <img
-                src="/assets/images/my-blog.png"
+                src="/assets/images/my-blog-compressed.png"
                 alt="project image"
                 class="image-item"
-                width="400"
               />
-              <figcaption>My Blog</figcaption>
-            </figure>
-          </a>
+            </a>
+            <figcaption class="project-tile">My Blog</figcaption>
+          </figure>
 
-          <a
-            href="https://www.freecodecamp.org/freeborncharles"
-            target="_blank"
-          >
-            <figure>
+          <figure class="wrapper-item">
+            <a
+              href="https://www.freecodecamp.org/freeborncharles"
+              target="_blank"
+            >
               <img
                 src="/assets/images/newspaper-compressed.png"
                 alt="project image"
                 class="image-item"
-                width="400"
               />
-              <figcaption>Newspaper web app</figcaption>
-            </figure>
-          </a>
+            </a>
 
-          <a
-            href="https://github.com/charlesfreeborn/technical-documentation-page"
-            target="_blank"
-          >
-            <figure>
+            <figcaption class="project-tile">Newspaper web app</figcaption>
+          </figure>
+
+          <figure class="wrapper-item">
+            <a
+              href="https://github.com/charlesfreeborn/technical-documentation-page"
+              target="_blank"
+            >
               <img
                 src="/assets/images/technical-documentation-compressed.png"
                 alt="project image"
                 class="image-item"
-                width="400"
               />
-              <figcaption>Technical documentation web app</figcaption>
-            </figure>
-          </a>
+            </a>
+            <figcaption class="project-tile">
+              Technical documentation web app
+            </figcaption>
+          </figure>
 
-          <a
-            href="https://github.com/charlesfreeborn/freeCodeCamp-tribute-project"
-            target="_blank"
-          >
-            <figure>
+          <figure class="wrapper-item">
+            <a
+              href="https://github.com/charlesfreeborn/freeCodeCamp-tribute-project"
+              target="_blank"
+            >
               <img
                 src="/assets/images/tribute-page-compressed.png"
                 alt="project image"
                 class="image-item"
-                width="400"
               />
-              <figcaption>Tribute Page</figcaption>
-            </figure>
-          </a>
+            </a>
+            <figcaption class="project-tile">Tribute Page</figcaption>
+          </figure>
         </div>
       </section>
       <!-- End of Project Section -->
 
       <!-- Start of Blog section -->
       <section id="blog">
-        <h2>My writings across the web</h2>
+        <h2>My author profile across the web</h2>
         <ul>
           <li>
             <a href="https://freeborncharles.com" target="_blank"
@@ -180,19 +179,20 @@
       <section id="hire">
         <h2>Hire me - let's work together</h2>
         <!-- use font awesome icons here -->
-
-        <a href="https://www.linkedin.com/in/charleseteure" target="_blank"
-          ><i class="fa-brands fa-linkedin fa-3x"></i
-        ></a>
-        <a href="https://twitter.com/charliecodes" target="_blank"
-          ><i class="fa-brands fa-twitter fa-3x"></i
-        ></a>
-        <a
-          href="https://github.com/charlesfreeborn"
-          id="profile-link"
-          target="_blank"
-          ><i class="fa-brands fa-github fa-3x"></i>
-        </a>
+        <div class="hire-container">
+          <a href="https://www.linkedin.com/in/charleseteure" target="_blank"
+            ><i class="fa-brands fa-linkedin fa-3x"></i
+          ></a>
+          <a href="https://twitter.com/charliecodes" target="_blank"
+            ><i class="fa-brands fa-twitter fa-3x"></i
+          ></a>
+          <a
+            href="https://github.com/charlesfreeborn"
+            id="profile-link"
+            target="_blank"
+            ><i class="fa-brands fa-github fa-3x"></i>
+          </a>
+        </div>
       </section>
       <!-- End of Hire me section -->
     </main>
